* RAW EV Histogram ([https://chdk.setepontos.com/index.php?topic=14544.msg148257#msg148257 development thread])
* Lua functions to get focal length from zoom position ([https://chdk.setepontos.com/index.php?topic=14733.msg149503#msg149503 discussion])
* Lua module zoomutil.lua providding functions set zoom by focal length and convert between FL and EFL

New script functions in 1.7:

 screen_needs_refresh
 get_focal_length
 get_eff_focal_length
 drawings.unpack_cnf_colors
 drawings.pack_cnf_colors

=1.6=
Current stable branch, released Oct 12, 2020 as 1.6.1

Development planning thread https://chdk.setepontos.com/index.php?topic=14150.0

Compatibility with 1.5:
* CHDK 1.5 scripts should be compatible.
  CHDK 1.6 adds additional functions, but does not significantly change behavior of existing functions. If @chdk_version is not specified in the script header, a warning is displayed and CHDK 1.3 compatible behavior is used.
* CFG files: CHDK 1.6 uses the same CFG files as 1.5.
  It should generally be compatible and retain your settings, but if you don't want to risk re-doing your CFG, backing up the CHDK/*.CFG files before updating is recommended. CFGs from earlier versions back to 1.2 should also probably work.
* Modules, language files and Lua libraries are NOT compatible.
  You must update these when you update your build, meaning use the "full" download.

Significant changes in 1.6:
* Support floating point math in Lua with fmath library
https://chdk.fandom.com/wiki/Lua/Lua_Reference#Floating_point_mathematical_functions_(fmath_library)
([https://chdk.setepontos.com/index.php?topic=14305.msg145763#msg145763 development thread])
* Option to show zebra outside of half press
* Screen recording module
([https://chdk.setepontos.com/index.php?topic=14347.0 development thread])

New script functions in 1.6:

 get_current_delta_sv96
 get_current_base_sv96
 fmath.* functions

=1.5=
Obsolete, released Nov 15, 2020 as 1.5.1