@@ -163,6 +163,7 @@ void my_kbd_read_keys()
     if (status == 0){
         // leave it alone...
 #ifdef CAM_HAS_JOGDIAL
+        // not in alt mode, jogdial events should be passed to canon fw as normal
         jogdial_control(0);
 #endif
     } else {
@@ -176,13 +177,18 @@ void my_kbd_read_keys()
         physw_status[2] = (kbd_new_state[2] & (~KEYS_MASK2)) | (kbd_mod_state[2] & KEYS_MASK2);
 
         kbdxtra = 1;
-
 #ifdef CAM_HAS_JOGDIAL
-        if ((jogdial_stopped==0) && !camera_info.state.state_kbd_script_run) {
+        // in alt mode, block canon fw from seeing dials if not in script, or
+        // when set to handle as clicks in script
+        int jogdial_shouldstop = (!camera_info.state.state_kbd_script_run
+            || camera_info.state.script_dial_control == DIAL_SCRIPT_KEYCLICK);
+        // update the jogdial blocking state if changed
+        if (!jogdial_stopped && jogdial_shouldstop) {
             jogdial_control(1);
+            // consume any pending jogdial movement
             get_jogdial_direction();
         }
-        else if (jogdial_stopped && camera_info.state.state_kbd_script_run) {
+        else if (jogdial_stopped && !jogdial_shouldstop) {
             jogdial_control(0);
         }
 #endif
