@@ -10,6 +10,7 @@ Significant changes in 1.7
 * RAW EV Histogram ([https://chdk.setepontos.com/index.php?topic=14544.msg148257#msg148257 development thread])
 * Lua functions to get focal length from zoom position ([https://chdk.setepontos.com/index.php?topic=14733.msg149503#msg149503 discussion])
 * Lua module zoomutil.lua providding functions set zoom by focal length and convert between FL and EFL
+* In script with chdk_version >= 1.7, jog dial and front dial are treated as keys named "jogdial_left", "frontdial_right" etc by wait_click and is_key, and hidden from Canon firmware. ([https://chdk.setepontos.com/index.php?topic=14861])
 
 New script functions in 1.7:
 
